--- a/index.css
+++ b/index.css
@@ -1,6 +1,17 @@
 /* Copyright 2013 The Chromium Authors. All rights reserved.
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
+ @font-face {
+  font-family: "Dosis";
+  src: url("../assets/fonts/Dosis-VariableFont_wght.ttf");
+ }
+
+ :root {
+  --sd-blue : #20124D;
+  --sd-red : #E6354D;
+  --sd-green : #5FBFBC;
+  --type : "Dosis" !important;
+}
 
 * {
   overflow:hidden;
@@ -181,4 +192,21 @@ body {
 .runner-container {
   transform-origin: top center;
   margin-top: 20vh;
+}
+
+#enter-game-text {
+  font-size: 3rem;
+  font-family: var(--type);
+  color: var(--sd-red);
+  font-weight: normal;
+  padding: 1rem;
+  border: solid 3px var(--sd-red);
+  border-radius: 2rem;
+  width: 47rem;
+  text-align: center;
+
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  margin: 0;
 }
