--- a/index.css
+++ b/index.css
@@ -213,6 +213,10 @@ body {
   margin: 0;
 }
 
+html {
+  background-color: #20124D;
+}
+
 .mobile {
   font-size: 1.5rem !important;
   padding: 1rem !important;
